[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/nodes/Player_spaceship.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/nodes/Score.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/nodes/Player_area.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/terminal/theme/theme.tres" type="Theme" id=4]
[ext_resource path="res://src/scripts/enemy/Spawn.gd" type="Script" id=5]
[ext_resource path="res://src/scripts/HealthBar.gd" type="Script" id=6]
[ext_resource path="res://src/assets/sprites/Hp Bar/full.png" type="Texture" id=7]
[ext_resource path="res://src/assets/sprites/Hp Bar/empty.png" type="Texture" id=8]
[ext_resource path="res://src/scripts/MenuPopup.gd" type="Script" id=9]
[ext_resource path="res://src/assets/sfx/Ghostrifter-Official-Celestia.mp3" type="AudioStream" id=10]
[ext_resource path="res://src/scripts/AudioPlayer.gd" type="Script" id=11]
[ext_resource path="res://src/assets/sprites/space_background.png" type="Texture" id=12]
[ext_resource path="res://src/assets/sprites/pause_button.png" type="Texture" id=13]
[ext_resource path="res://src/nodes/Joystick.tscn" type="PackedScene" id=14]
[ext_resource path="res://MainMenuButtons.tres" type="Theme" id=15]
[ext_resource path="res://src/scripts/GameOverPopup.gd" type="Script" id=16]
[ext_resource path="res://src/nodes/FinalScore.gd" type="Script" id=17]
[ext_resource path="res://src/nodes/FinalCoins.gd" type="Script" id=18]

[node name="MainScene" type="Node2D"]
script = ExtResource( 5 )

[node name="Player_spaceship" parent="." instance=ExtResource( 1 )]
position = Vector2( 540, 1700 )
scale = Vector2( 4, 4 )

[node name="Player_area" parent="." instance=ExtResource( 3 )]
position = Vector2( 4, 1350 )
scale = Vector2( 1.055, 3 )

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Score" parent="GUI" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
margin_left = 763.0
margin_top = 90.0
margin_right = -191.0
margin_bottom = -2310.0
grow_horizontal = 0
rect_scale = Vector2( 2.5, 2.5 )
text = "0"
align = 2
valign = 1

[node name="HP Bar" type="TextureProgress" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 50.0
margin_right = -836.0
margin_bottom = -2343.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 4 )
value = 100.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 7 )
script = ExtResource( 6 )

[node name="Joystick" parent="GUI" instance=ExtResource( 14 )]
position = Vector2( 540, 2150 )

[node name="PauseButton" type="TouchScreenButton" parent="GUI"]
position = Vector2( 980, 150 )
scale = Vector2( 0.4, 0.4 )
normal = ExtResource( 13 )
visibility_mode = 1

[node name="GameOver" type="CanvasLayer" parent="."]

[node name="Popup" type="Popup" parent="GameOver"]
pause_mode = 2
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -7.0
margin_bottom = -4.0
popup_exclusive = true
script = ExtResource( 16 )

[node name="ColorRect" type="ColorRect" parent="GameOver/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -0.511108
margin_bottom = 4.0
color = Color( 0, 0, 0, 0.745098 )

[node name="GameOverButton" type="Button" parent="GameOver/Popup"]
anchor_right = 1.007
anchor_bottom = 1.0
margin_right = -0.510986
margin_bottom = 4.0
shortcut_in_tooltip = false
flat = true

[node name="Label" type="Label" parent="GameOver/Popup/GameOverButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -788.0
theme = ExtResource( 15 )
text = "GAME OVER"
align = 1
valign = 1

[node name="Label2" type="Label" parent="GameOver/Popup/GameOverButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 500.0
margin_right = 1080.0
margin_bottom = 1900.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 15 )
text = "Click to continue
"
align = 1
valign = 1

[node name="FinalScore" parent="GameOver/Popup/GameOverButton" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = -648.0
margin_bottom = -1500.0
grow_horizontal = 0
rect_scale = Vector2( 2.5, 2.5 )
theme = ExtResource( 15 )
text = "Final Score: 0"
align = 1
valign = 1
script = ExtResource( 17 )

[node name="FinalCoins" parent="GameOver/Popup/GameOverButton" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = -648.0
margin_bottom = -1440.0
grow_horizontal = 0
rect_scale = Vector2( 2.5, 2.5 )
theme = ExtResource( 15 )
text = "Coins got: 0"
align = 1
valign = 1
script = ExtResource( 18 )

[node name="PauseMenu" type="CanvasLayer" parent="."]

[node name="Popup" type="Popup" parent="PauseMenu"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
script = ExtResource( 9 )

[node name="Background" type="ColorRect" parent="PauseMenu/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 140.0
margin_top = 675.0
margin_right = -140.0
margin_bottom = -725.0
color = Color( 0.470588, 0.470588, 0.470588, 0.607843 )

[node name="Resume" type="Button" parent="PauseMenu/Popup"]
margin_left = 165.0
margin_top = 750.0
margin_right = 915.0
margin_bottom = 1000.0

[node name="Label" type="Label" parent="PauseMenu/Popup/Resume"]
anchor_right = 1.0
anchor_bottom = 1.008
margin_right = 2.0
theme = ExtResource( 15 )
text = "RESUME"
align = 1
valign = 1

[node name="Restart" type="Button" parent="PauseMenu/Popup"]
margin_left = 165.0
margin_top = 1050.0
margin_right = 915.0
margin_bottom = 1300.0

[node name="Label" type="Label" parent="PauseMenu/Popup/Restart"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -2.0
theme = ExtResource( 15 )
text = "RESTART"
align = 1
valign = 1

[node name="Exit" type="Button" parent="PauseMenu/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 165.0
margin_top = 1350.0
margin_right = -165.0
margin_bottom = -800.0

[node name="Label" type="Label" parent="PauseMenu/Popup/Exit"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = 2.0
theme = ExtResource( 15 )
text = "EXIT"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -20.0
autoplay = true

[node name="AudioPlayer" type="Node" parent="."]
script = ExtResource( 11 )

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
light_mask = 4
margin_right = 1080.0
margin_bottom = 2400.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 7

[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="pressed" from="GUI/PauseButton" to="PauseMenu/Popup" method="_on_PauseButton_pressed"]
[connection signal="pressed" from="GameOver/Popup/GameOverButton" to="GameOver/Popup" method="_on_GameOverButton_pressed"]
[connection signal="pressed" from="PauseMenu/Popup/Resume" to="PauseMenu/Popup" method="_on_Resume_pressed"]
[connection signal="pressed" from="PauseMenu/Popup/Restart" to="PauseMenu/Popup" method="_on_Restart_pressed"]
[connection signal="pressed" from="PauseMenu/Popup/Exit" to="PauseMenu/Popup" method="_on_Exit_pressed"]
